# click_demo

./: README.md  pyproject.toml
src/click_demo/: __main__.py
