[project]
name = "click-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuizho", email = "yuizho3@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
click_demo = "click_demo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.11",
    "mypy>=1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/click_demo"]

[tool.ruff]
line-length = 100
